# texecom-esp32-homeassistant

./: .gitignore  README.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/hardware/: phase-1-wiring.md
.planning/phases/01-serial-to-tcp-bridge/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md
.planning/phases/01.5-mqtt-bringup/: 01.5-01-PLAN.md  01.5-01-SUMMARY.md  01.5-CONTEXT.md  01.5-VALIDATION.md
.planning/phases/02-wintex-protocol-capture-decode/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md
components/texecom/: __init__.py  capture.cpp  capture.h  capture_http.cpp  capture_http.h  panel_model.h  panel_model_premier24.cpp  panel_model_premier24.h  posix_stubs.c  ring_buffer.h  session_state.h  texecom.cpp  texecom.h
esphome/: secrets.yaml.example  texecom-bridge.yaml
tests/: CMakeLists.txt  test_capture.cpp  test_capture_http_paths.cpp  test_panel_model.cpp  test_ring_buffer.cpp  test_session_state.cpp
